--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto Slab', monospace;
     text-align: center;
     background-color: #1a1e1f;
     color: #2e3436;
@@ -9,10 +9,11 @@ body {
 }
 
 h1 {
-    margin-top: 2em;
-    margin-bottom: -1.4em;
+    margin-top: 0.4em;
+    margin-bottom: -1.6em;
     z-index: 1;
     position: relative;
+    font-weight: normal;
     letter-spacing: 20px;
     text-indent: 20px;
 }
